# fastprogress

./: CHANGELOG.md  pyproject.toml  settings.ini
fastprogress/: __init__.py  _modidx.py  fastprogress.py
nbs/: 00_core.ipynb  01_fastprogress.ipynb  index.ipynb
